# telecom-chatbot

./: README.md  ingest_faq.py  ingest_pdf.py  ingest_tickets.py  main.py  pyproject.toml  retriever.py
chroma_store/: chroma.sqlite3
