[project]
name = "telecom-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-chroma",
    "langchain-google-genai",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "pandas",
    "python-dotenv",
    "streamlit",
    "fpdf2",
    "pypdf",
    "langchain-community",
    "langchain-text-splitters",
]
